--- a/scss/_dark-styles.scss
+++ b/scss/_dark-styles.scss
@@ -13,3 +13,11 @@
 p a {
     text-decoration: underline;
 }
+
+hr {
+    border-top: 1px solid $gray-700;
+}
+
+.dropdown-item {
+    color: $link-color;
+}
